third_party/rust/chromium_crates_io/vendor/derive_more-v2/tests/compile_fail/from_str/union.rs
#[derive(derive_more::FromStr)]
union IntOrFloat {
    i: u32,
}

fn main() {}
